# eclipse-simulator

./: .gitignore  README.md  dcf_ast.py  solarEclipses.py  solarEclipses_makeKml.py
solarEclipseRender/: CMakeLists.txt  Makefile
solarEclipseRender/src/: constants.h  country_lookup.c  country_lookup.h  duration.c  duration.h  ephemeris.c  ephemeris.h  jpeg_in.c  jpeg_in.h  main.c  make_binary_map.c  make_binary_map.h  map_eclipse_contours.c  map_eclipse_contours.h  map_greatest_eclipse.c  map_greatest_eclipse.h  projection.c  projection.h  render_2d.c  render_2d.h  render_3d.c  render_3d.h  rendering.c  rendering.h  settings.c  settings.h  shadow_calc.c  shadow_calc.h
solarEclipseRender/src/coreUtils/: asciiDouble.c  asciiDouble.h  errorReport.c  errorReport.h  strConstants.h
solarEclipseRender/src/jpeg/: jpeg.h  jpeg_in.c
solarEclipseRender/src/mathsTools/: julianDate.c  julianDate.h  sphericalAst.c  sphericalAst.h
solarEclipseRender/src/png/: image.h  image_in.c
